--- a/Test_01/Test_01/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Test_01/Test_01/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -134,7 +134,7 @@ bUseUnsortedMenus=False
 bShowGrid=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Engine/MaterialTemplates/Textures
+ContentBrowserTab1.SelectedPaths=/Game/Effect/Common/Material
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -164,23 +164,26 @@ LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Effect/Common/Material/MF_Dissolve
-MRUItem1=/Game/Effect/Common/Material/MF_a
-MRUItem2=/Game/Effect/Common/Material/NFS_Dissolve
-MRUItem3=/Game/Effect/Common/Material/M_VFX_Master_Inst
-MRUItem4=/Game/Effect/Common/Material/M_VFX_Master
-MRUItem5=/Engine/Functions/Engine_MaterialFunctions03/Math/RemapValueRange
-MRUItem6=/Game/Effect/Other/ExportParticalData/NE_Test
-MRUItem7=/Niagara/DefaultAssets/DefaultSpriteMaterial
-MRUItem8=/Game/Effect/Other/ExportParticalData/NE_Burst
-MRUItem9=/Game/Effect/Hit/Niagara/NE_Hit
-MRUItem10=/Game/Effect/Common/Texture/T_Glow01
-MRUItem11=/Game/Effect/Common/Material/M_MasterMaterial
-MRUItem12=/Game/ThirdPersonBP/VFX/NS/NS_Test
-MRUItem13=/Game/ThirdPersonBP/VFX/NS/NS_a
-MRUItem14=/Game/ThirdPersonBP/VFX/ExportParticalData/BP_ExportData
-MRUItem15=/Game/ThirdPersonBP/VFX/NMS/NMS_Test
-MRUItem16=/Game/ThirdPersonBP/VFX/NE/NE_burst
+MRUItem0=/Game/Effect/Common/Material/M_VFX_Master_Inst
+MRUItem1=/Game/StarterContent/Particles/Materials/M_Fire_SubUV
+MRUItem2=/Game/StarterContent/Particles/P_Fire
+MRUItem3=/Game/Effect/Common/Material/M_VFX_Master
+MRUItem4=/Game/Effect/Common/Texture/T_Glow01
+MRUItem5=/Game/Effect/Other/NiagaraPractice/NE_Burst
+MRUItem6=/Game/Effect/Common/Material/MF_Dissolve
+MRUItem7=/Game/Effect/Common/Material/MF_a
+MRUItem8=/Game/Effect/Common/Material/NFS_Dissolve
+MRUItem9=/Engine/Functions/Engine_MaterialFunctions03/Math/RemapValueRange
+MRUItem10=/Game/Effect/Other/ExportParticalData/NE_Test
+MRUItem11=/Niagara/DefaultAssets/DefaultSpriteMaterial
+MRUItem12=/Game/Effect/Other/ExportParticalData/NE_Burst
+MRUItem13=/Game/Effect/Hit/Niagara/NE_Hit
+MRUItem14=/Game/Effect/Common/Material/M_MasterMaterial
+MRUItem15=/Game/ThirdPersonBP/VFX/NS/NS_Test
+MRUItem16=/Game/ThirdPersonBP/VFX/NS/NS_a
+MRUItem17=/Game/ThirdPersonBP/VFX/ExportParticalData/BP_ExportData
+MRUItem18=/Game/ThirdPersonBP/VFX/NMS/NMS_Test
+MRUItem19=/Game/ThirdPersonBP/VFX/NE/NE_burst
 
 [PluginBrowser]
 InstalledPlugins=UIWS
@@ -537,6 +540,47 @@ MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureSample=True
 MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureBase=True
 MaterialExpressionComment.MaterialExpressionComment=True
 MaterialExpressionComment.MaterialExpression=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.CustomPrimitiveData=True
+MaterialExpressionVectorParameter.ParameterCustomization=True
+MaterialExpressionPanner.MaterialExpressionPanner=True
+MaterialExpressionPanner.MaterialExpression=True
+MaterialExpressionPower.MaterialExpressionPower=True
+MaterialExpressionPower.MaterialExpression=True
+ParticleSystem.ParticleSystem=True
+ParticleSystem.Thumbnail=True
+ParticleSystem.LOD=True
+ParticleSystem.MacroUV=True
+ParticleSystem.Bounds=True
+ParticleSystem.Delay=True
+ParticleSystem.Performance=True
+ParticleSystem.Occlusion=True
+ParticleSystem.Materials=True
+ParticleSpriteEmitter.Particle=True
+ParticleSpriteEmitter.Cascade=True
+ParticleSpriteEmitter.Significance=True
+ParticleModuleRequired.Emitter=True
+ParticleModuleRequired.Duration=True
+ParticleModuleRequired.Delay=True
+ParticleModuleRequired.SubUV=True
+ParticleModuleRequired.MacroUV=True
+ParticleModuleRequired.Rendering=True
+ParticleModuleRequired.ParticleCutout=True
+ParticleModuleRequired.Normals=True
+ParticleModuleRequired.Materials=True
+MaterialExpressionFontSample.MaterialExpressionFontSample=True
+MaterialExpressionFontSample.MaterialExpression=True
+MaterialExpressionChannelMaskParameter.General=True
+MaterialExpressionChannelMaskParameter.MaterialExpressionChannelMaskParameter=True
+MaterialExpressionChannelMaskParameter.MaterialExpression=True
+MaterialExpressionChannelMaskParameter.CustomPrimitiveData=True
+MaterialExpressionComponentMask.MaterialExpressionComponentMask=True
+MaterialExpressionComponentMask.MaterialExpression=True
+MaterialExpressionNormalize.MaterialExpression=True
+MaterialExpressionConstant4Vector.MaterialExpressionConstant4Vector=True
+MaterialExpressionConstant4Vector.MaterialExpression=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/Effect/Other/ExportParticalData/BP_ExportData.BP_ExportData;
@@ -553,7 +597,7 @@ Object=
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 MaterialExpressionDynamicParameter="\"Object.ParamNames\" \"Object.DefaultValue\" "
-MaterialExpression=
+MaterialExpression="\"Object.DefaultValue\" "
 MaterialExpressionConstant3Vector="\"Object.Constant\" "
 NiagaraNodeInput="\"Object.Input.Input\" "
 NiagaraNode="\"Object.Input.Input\" "
@@ -562,6 +606,9 @@ MaterialExpressionScalarParameter="\"Object.DefaultValue\" "
 MaterialExpressionParameter="\"Object.DefaultValue\" "
 MaterialExpressionStaticSwitchParameter="\"Object.DefaultValue\" "
 MaterialExpressionStaticBoolParameter="\"Object.DefaultValue\" "
+MaterialExpressionVectorParameter="\"Object.DefaultValue\" "
+MaterialExpressionChannelMaskParameter="\"Object.DefaultValue\" "
+MaterialExpressionConstant4Vector="\"Object.Constant\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/VFX/NS/NS_a.NS_a=0
@@ -576,6 +623,11 @@ MaterialExpressionStaticBoolParameter="\"Object.DefaultValue\" "
 /Engine/Functions/Engine_MaterialFunctions03/Math/RemapValueRange.RemapValueRange=0
 /Game/Effect/Common/Material/NFS_Dissolve.NFS_Dissolve=0
 /Game/Effect/Common/Material/MF_Dissolve.MF_Dissolve=0
+/Game/Effect/Common/Material/M_VFX_Master_Inst.M_VFX_Master_Inst=0
+/Game/Effect/Other/NiagaraPractice/NE_Burst.NE_Burst=0
+/Game/Effect/Common/Material/M_VFX_Master.M_VFX_Master=0
+/Game/StarterContent/Particles/Materials/M_Fire_SubUV.M_Fire_SubUV=1
+/Game/StarterContent/Particles/P_Fire.P_Fire=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -614,7 +666,7 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [MaterialEditor]
-PrimType=1
+PrimType=3
 
 [/Script/UnrealEd.MaterialStatsOptions]
 bPlatformUsed[0]=1
@@ -678,7 +730,7 @@ MaterialEditorInstanceConstant.General=True
 
 [RootWindow]
 ScreenPosition=X=202.000 Y=84.000
-WindowSize=X=1582.000 Y=735.333
+WindowSize=X=1585.333 Y=738.000
 InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
@@ -1535,13 +1587,50 @@ BlueprintGraph.TimeStamp=2021.09.09-05.49.28
 BlueprintGraph.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2021.09.09-05.51.25
 TextureEditor.LastCompileMethod=Unknown
+Cascade.TimeStamp=2021.09.09-05.49.35
+Cascade.LastCompileMethod=Unknown
+DistCurveEditor.TimeStamp=2021.09.09-05.49.56
+DistCurveEditor.LastCompileMethod=Unknown
 
 [DetailCustomWidgetExpansion]
-MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Dissolve,
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Base,MaterialEditorInstanceConstant.ParameterGroups.Dissolve,
 MaterialInstanceConstant=
 
 [MaterialInstanceEditor]
 bShowGrid=True
 bDrawGrid=False
 PrimType=1
+
+[/Script/UnrealEd.CascadeOptions]
+ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
+ModuleColor_Beam_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_Trail_Unselected=(B=170,G=235,R=130,A=0)
+ModuleColor_Trail_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_Spawn_Unselected=(B=100,G=100,R=200,A=0)
+ModuleColor_Spawn_Selected=(B=50,G=50,R=255,A=0)
+ModuleColor_Light_Unselected=(B=49,G=40,R=90,A=0)
+ModuleColor_Light_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_SubUV_Unselected=(B=49,G=90,R=40,A=0)
+ModuleColor_SubUV_Selected=(B=100,G=200,R=50,A=0)
+ModuleColor_Required_Unselected=(B=100,G=200,R=200,A=0)
+ModuleColor_Required_Selected=(B=50,G=225,R=255,A=0)
+ModuleColor_Event_Unselected=(B=255,G=64,R=64,A=0)
+ModuleColor_Event_Selected=(B=255,G=0,R=0,A=0)
+GridColor_Hi=(B=255,G=100,R=0,A=0)
+GridColor_Low=(B=255,G=100,R=0,A=0)
+bShowParticleCounts=False
+bShowParticleEvents=False
+bShowParticleTimes=False
+bShowParticleDistance=False
+bShowParticleMemory=False
+ParticleMemoryUpdateTime=0.000000
+bShowFloor=False
+FloorMesh=/Engine/EditorMeshes/AnimTreeEd_PreviewFloor.AnimTreeEd_PreviewFloor
+FloorPosition=(X=0.000000,Y=0.000000,Z=0.000000)
+FloorRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+FloorScale=1.000000
+FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
+
+[CascadeEditor]
+LightDir=P=-45.000004 Y=-179.999969 R=0.000000
 
