update : material about Master Material Frasnel

--- a/Test_01/Test_01/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Test_01/Test_01/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -131,7 +131,6 @@ MRUItem0=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Effect/Common/Material
@@ -164,26 +163,26 @@ LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Effect/Common/Material/M_VFX_Master_Test
-MRUItem1=/Game/Effect/Common/Material/M_VFX_Master_Test_Inst
-MRUItem2=/Game/Effect/Other/NiagaraPractice/NS_Emission
-MRUItem3=/Game/Effect/Common/Material/M_VFX_Master_Test_Inst1
-MRUItem4=/Engine/Functions/Engine_MaterialFunctions02/Utility/DebugOnOff
-MRUItem5=/Game/Effect/Common/Material/M_VFX_Master
-MRUItem6=/Game/Effect/Other/NiagaraPractice/NE_Emission
-MRUItem7=/Game/Effect/Other/NiagaraPractice/NE_Burst
-MRUItem8=/Game/Effect/Hit/Niagara/NE_Hit
-MRUItem9=/Game/Effect/Common/Material/MF_Base
-MRUItem10=/Game/Effect/Common/Material/MF_Dissolve
-MRUItem11=/Game/Effect/Common/Texture/T_Noise03
-MRUItem12=/Game/Effect/Common/Texture/T_Noise01_RGBA
-MRUItem13=/Game/Effect/Common/Material/M_VFX_Master_Inst
-MRUItem14=/Game/StarterContent/Particles/Materials/M_Fire_SubUV
-MRUItem15=/Game/StarterContent/Particles/P_Fire
-MRUItem16=/Game/Effect/Common/Texture/T_Glow01
-MRUItem17=/Game/Effect/Common/Material/MF_a
-MRUItem18=/Game/Effect/Common/Material/NFS_Dissolve
-MRUItem19=/Engine/Functions/Engine_MaterialFunctions03/Math/RemapValueRange
+MRUItem0=/Game/Effect/Common/Material/M_VFX_Master_Inst
+MRUItem1=/Game/Effect/Common/Material/MI_VFX_Master_Test
+MRUItem2=/Game/Effect/Common/Material/MF_Fresnel
+MRUItem3=/Game/Effect/Common/Material/M_VFX_Master_Test
+MRUItem4=/Game/Effect/Common/Material/M_VFX_Master
+MRUItem5=/Game/Effect/Common/Texture/T_Noise03_RGBA
+MRUItem6=/Game/Effect/Common/Material/M_VFX_Master_Test1
+MRUItem7=/Game/Effect/Common/Material/M_VFX_Master_Test_Inst
+MRUItem8=/Game/Effect/Other/NiagaraPractice/NS_Emission
+MRUItem9=/Game/Effect/Common/Material/M_VFX_Master_Test_Inst1
+MRUItem10=/Engine/Functions/Engine_MaterialFunctions02/Utility/DebugOnOff
+MRUItem11=/Game/Effect/Other/NiagaraPractice/NE_Emission
+MRUItem12=/Game/Effect/Other/NiagaraPractice/NE_Burst
+MRUItem13=/Game/Effect/Hit/Niagara/NE_Hit
+MRUItem14=/Game/Effect/Common/Material/MF_Base
+MRUItem15=/Game/Effect/Common/Material/MF_Dissolve
+MRUItem16=/Game/Effect/Common/Texture/T_Noise03
+MRUItem17=/Game/Effect/Common/Texture/T_Noise01_RGBA
+MRUItem18=/Game/StarterContent/Particles/Materials/M_Fire_SubUV
+MRUItem19=/Game/StarterContent/Particles/P_Fire
 
 [PluginBrowser]
 InstalledPlugins=UIWS
@@ -618,8 +617,18 @@ SphereReflectionCapture.Tags=True
 SphereReflectionCapture.Cooking=True
 SphereReflectionCapture.Replication=True
 SphereReflectionCapture.Input=True
+PostProcessVolume.TransformCommon=True
+PostProcessVolume.Lens=True
+PostProcessVolume.Color Grading=True
+PostProcessVolume.Film=True
+PostProcessVolume.Rendering Features=True
+PostProcessVolume.PostProcessVolumeSettings=True
+PostProcessVolume.Replication=True
+PostProcessVolume.BrushSettings=True
+PostProcessVolume.Actor=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Effect/Common/Material/M_VFX_Master_Inst.M_VFX_Master_Inst;
 RecentlyPlaced=/Game/Effect/Common/Material/MI_VFX_Master_Test.MI_VFX_Master_Test;
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Effect/Other/NiagaraPractice/NS_Emission.NS_Emission;
@@ -646,12 +655,19 @@ NiagaraNodeInput="\"Object.Input.Input\" "
 NiagaraNode="\"Object.Input.Input\" "
 EdGraphNode="\"Object.Input.Input\" "
 MaterialExpressionScalarParameter="\"Object.DefaultValue\" "
-MaterialExpressionParameter=
+MaterialExpressionParameter="\"Object.DefaultValue\" "
 MaterialExpressionStaticSwitchParameter="\"Object.DefaultValue\" "
 MaterialExpressionStaticBoolParameter="\"Object.DefaultValue\" "
 MaterialExpressionVectorParameter="\"Object.DefaultValue\" "
 MaterialExpressionChannelMaskParameter="\"Object.DefaultValue\" "
 MaterialExpressionConstant4Vector="\"Object.Constant\" "
+PreviewMaterial="\"Object.Group Sorting.ParameterGroupData.ParameterGroupData[35]\" "
+Material="\"Object.Group Sorting.ParameterGroupData.ParameterGroupData[35]\" "
+MaterialInterface=
+MaterialEditorInstanceConstant=
+PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/VFX/NS/NS_a.NS_a=0
@@ -678,6 +694,9 @@ MaterialExpressionConstant4Vector="\"Object.Constant\" "
 /Game/Effect/Common/Material/M_VFX_Master_Test_Inst.M_VFX_Master_Test_Inst=0
 /Game/Effect/Common/Material/M_VFX_Master_Test.M_VFX_Master_Test=0
 /Game/Effect/Common/Material/MI_VFX_Master_Test.MI_VFX_Master_Test=0
+/Game/Effect/Common/Texture/T_Noise03_RGBA.T_Noise03_RGBA=0
+/Game/Effect/Common/Material/M_VFX_Master_Test1.M_VFX_Master_Test1=0
+/Game/Effect/Common/Material/MF_Fresnel.MF_Fresnel=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -781,7 +800,7 @@ StaticMeshActor.Materials=True
 
 [RootWindow]
 ScreenPosition=X=202.000 Y=84.000
-WindowSize=X=1594.000 Y=747.333
+WindowSize=X=1597.333 Y=750.000
 InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
@@ -1644,7 +1663,7 @@ DistCurveEditor.TimeStamp=2021.09.09-05.49.56
 DistCurveEditor.LastCompileMethod=Unknown
 
 [DetailCustomWidgetExpansion]
-MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Dissolve,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Base,MaterialEditorInstanceConstant.ParameterGroups.DistortionTexture,MaterialEditorInstanceConstant.ParameterGroups.Noise,MaterialEditorInstanceConstant.ParameterGroups.Distortion,MaterialEditorInstanceConstant.ParameterGroups.SoftParticla,MaterialEditorInstanceConstant.ParameterGroups.Global Static Component Mask Parameter Values,
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Distortion,MaterialEditorInstanceConstant.ParameterGroups.Global Static Component Mask Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Base,MaterialEditorInstanceConstant.ParameterGroups.Dissolve,MaterialEditorInstanceConstant.ParameterGroups.DistortionTexture,MaterialEditorInstanceConstant.ParameterGroups.Fresnel,MaterialEditorInstanceConstant.ParameterGroups.Noise,MaterialEditorInstanceConstant.ParameterGroups.SoftParticla,
 MaterialInstanceConstant=
 
 [MaterialInstanceEditor]
